--- a/scripts/index.Rmd
+++ b/scripts/index.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Index"
-author: "Yuhaniz"
+title: "Comparing Disney Films"
+author: "Yuhaniz, Siya, Cole, Jonathan"
 date: "11/25/2020"
 output: html_document
 ---
@@ -9,22 +9,34 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+```{r include=FALSE}
+library("knitr")
+source("chart3.R")
+```
+## Introduction
+Our domain of interest is entertainment so in this report, we'll be studying a 
+data set comparing all of the movies made by Disney. We are interested in 
+exploring the domain of entertainment because it is a very broad field with lots 
+of available data in part due to the rise of streaming services. This data set 
+includes all Disney movies up to 2016. It can be found [here](https://www.kaggle.com/prateekmaj21/disney-movies?select=disney_movies.csv).
+We want to study this data to see what types of movies are the most successful 
+in terms of grossing amount. These types of studies help Disney plan future 
+films in terms of the genre, ratings etc. the film should stick to.
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+## What trends do we see in the top 20 highest-grossing Disney films in Disney history?
+This bar chart compares the genres and ratings of the 20 highest-grossing 
+films in Disney's history. We made it to see if there are any trends in which
+types of movies do the best.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+``` {r echo=FALSE}
+make_3rd_chart(movies)
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+As we can see, the most popular, or highest-grossing, Disney films tend to 
+fall in the adventure genre. These movies are also often rated G. In the 
+earlier chart we did, we found that adventure movies are usually the 
+highest-grossing. I think that from these charts we've made, we can infer that 
+Disney has a good understanding of their audience. They clearly know that 
+adventure movies make the most money so they stick to those. This chart can 
+give us more confidence in our prior chart because we once again see that 
+adventure films make a lot of money. 
