--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Index"
-author: "Yuhaniz"
+title: "Comparing Disney Films"
+author: "Yuhaniz, Siya, Cole, Jonathan"
 date: "11/25/2020"
 output: html_document
 ---
@@ -9,9 +9,40 @@ source("scripts/chart1.R")
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r include=FALSE}
+library("knitr")
+source("chart3.R")
+```
+## Introduction
+Our domain of interest is entertainment so in this report, we'll be studying a 
+data set comparing all of the movies made by Disney. We are interested in 
+exploring the domain of entertainment because it is a very broad field with lots 
+of available data in part due to the rise of streaming services. This data set 
+includes all Disney movies up to 2016. It can be found [here](https://www.kaggle.com/prateekmaj21/disney-movies?select=disney_movies.csv).
+We want to study this data to see what types of movies are the most successful 
+in terms of grossing amount. These types of studies help Disney plan future 
+films in terms of the genre, ratings etc. the film should stick to.
+
 ## Graph 1
 This chart was intended to show the relationship between the yearly gross of Disney movies, comparing the inflation adjusted gross and total gross, over time from 1937 to 2016.
 ```{r plot3, echo=FALSE, fig.width= 20}
 plot_line_graph
 ```
 
+## What trends do we see in the top 20 highest-grossing Disney films in Disney history?
+This bar chart compares the genres and ratings of the 20 highest-grossing 
+films in Disney's history. We made it to see if there are any trends in which
+types of movies do the best.
+
+``` {r echo=FALSE}
+make_3rd_chart(movies)
+```
+
+As we can see, the most popular, or highest-grossing, Disney films tend to 
+fall in the adventure genre. These movies are also often rated G. In the 
+earlier chart we did, we found that adventure movies are usually the 
+highest-grossing. I think that from these charts we've made, we can infer that 
+Disney has a good understanding of their audience. They clearly know that 
+adventure movies make the most money so they stick to those. This chart can 
+give us more confidence in our prior chart because we once again see that 
+adventure films make a lot of money. 
