--- a/index.Rmd
+++ b/index.Rmd
@@ -44,6 +44,15 @@ plot_line_graph
 
 As you can see, the total gross and inflation adjsuted gross flunctuates but at and after 2014, there was an increasing trend. Before 2014, the trend of the inflation adjusted gross were all larger than the trend of total gross to account. This is likely to account for the price level changes. But in 2014 and after, the inflation adjusted gross and total gross made the same gross values.
 
+## How does the genre of a Disney movie affect the amount grossed?
+This chart plots the realtionship between the inflation adjusted gross over all the different genres of movies in the dataset. We made this box plot to see which genres grossed the most money for Disney.
+
+```{r echo=FALSE}
+box_plot_adjusted(movies)
+```
+
+This box plot shows that the Adventure and Musical categories make the most money on average. The genres making the lowest amount of money are Documentary and horror.Musical has an outlier that grossed far more than any other movie. The Y value of the graph plot was limmited to make the plot readable.  
+
 
 ## What trends do we see in the top 20 highest-grossing Disney films in Disney history?
 This bar chart compares the genres and ratings of the 20 highest-grossing 
