--- a/index.Rmd
+++ b/index.Rmd
@@ -39,7 +39,10 @@ summary
 
 ## Summary Table
 
-This table shows 10 Disney movies with the average inflation gross income of each movie. Included with this is the genre of each of these movies and the MPAA rating. This demonstrates if the movie genre and the MPAA affects the inflation gross income. 
+This table shows 10 Disney movies with the average inflation gross income of 
+each movie. Included with this is the genre of each of these movies and the MPAA 
+rating. This demonstrates if the movie genre and the MPAA affects the inflation
+gross income. 
 
 
 ## What trends do we see between the yearly gross of Disney movies over time?
