--- a/index.Rmd
+++ b/index.Rmd
@@ -11,6 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r include=FALSE}
 library("knitr")
 source("chart3.R")
+source("chart2.R")
 source("chart1.R")
 source("summary_info.R")
 ```
@@ -19,8 +20,7 @@ Our domain of interest is entertainment so in this report, we'll be studying a
 data set comparing all of the movies made by Disney. We are interested in 
 exploring the domain of entertainment because it is a very broad field with lots 
 of available data in part due to the rise of streaming services. This data set 
-includes all Disney movies up to 2016. It can be found
-[here](https://www.kaggle.com/prateekmaj21/disney-movies?select=disney_movies.csv).
+includes all Disney movies up to 2016. It can be found [here](https://www.kaggle.com/prateekmaj21/disney-movies?select=disney_movies.csv).
 We want to study this data to see what types of movies are the most successful 
 in terms of grossing amount. These types of studies help Disney plan future 
 films in terms of the genre, ratings etc. the film should stick to.
@@ -30,11 +30,9 @@ films in terms of the genre, ratings etc. the film should stick to.
 This data displays a few aspects of Disney movies. Such as the release dates, 
 genre, MPAA rating, total gross income and inflation adjusted gross income. In 
 this data the highest gross movie is `r Highest_Gross_Movie` *Star Wars Ep. VII: 
-The Force Awakens*. Also, the lowest gross movies would be the movies 
-`r Lowest_Gross_Movies`. With this being said, the most common genre from the 
-data are `r Most_Common_Genre` and the most common release date year would be 
-the `r Most_Common_Release_Year`. Finally, in this data it displays 
-`r Total_Movies`. This can all be seen below.
+The Force Awakens*. Also, the lowest gross movies would be the movies `r Lowest_Gross_Movies`. With this being said, the most common genre from the data 
+are `r Most_Common_Genre` and the most common release date year would be the `r Most_Common_Release_Year`. Finally, in this data it displays `r Total_Movies`. 
+This can all be seen below.
 ```{r}
 summary
 ```
@@ -42,10 +40,7 @@ summary
 
 ## Summary Table
 
-This table shows 10 Disney movies with the average inflation gross income of 
-each movie. Included with this is the genre of each of these movies and the MPAA 
-rating. This demonstrates if the movie genre and the MPAA affects the inflation
-gross income. 
+This table shows 10 Disney movies with the average inflation gross income of each movie. Included with this is the genre of each of these movies and the MPAA rating. This demonstrates if the movie genre and the MPAA affects the inflation gross income. 
 
 
 ## What trends do we see between the yearly gross of Disney movies over time?
@@ -62,6 +57,16 @@ and after 2014, there was an increasing trend. Before 2014, the trend of the
 inflation adjusted gross were all larger than the trend of total gross to 
 account. This is likely to account for the price level changes. But in 2014 and 
 after, the inflation adjusted gross and total gross made the same gross values.
+
+## How does the genre of a Disney movie affect the amount grossed?
+
+This chart plots the realtionship between the inflation adjusted gross over all the different genres of movies in the dataset. We made this box plot to see which genres grossed the most money for Disney.
+
+```{r echo=FALSE}
+box_plot_adjusted(movies)
+```
+
+This box plot shows that the Adventure and Musical categories make the most money on average. The genres making the lowest amount of money are Documentary and horror.Musical has an outlier that grossed far more than any other movie. The Y value of the graph plot was limmited to make the plot readable.  
 
 
 ## What trends do we see in the top 20 highest-grossing Disney films in Disney history?
@@ -81,4 +86,3 @@ Disney has a good understanding of their audience. They clearly know that
 adventure movies make the most money so they stick to those. This chart can 
 give us more confidence in our prior chart because we once again see that 
 adventure films make a lot of money. 
-
