--- a/index.Rmd
+++ b/index.Rmd
@@ -10,10 +10,12 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r include=FALSE}
 library("knitr")
-source("chart3.R")
-source("chart2.R")
-source("chart1.R")
-source("summary_info.R")
+source("scripts/chart3.R")
+source("scripts/chart2.R")
+source("scripts/chart1.R")
+source("scripts/summary_info.R")
+source("scripts/summary_table.R")
+movies <- read.csv("data/disney_movies.csv", stringsAsFactors = FALSE)
 ```
 ## Introduction
 Our domain of interest is entertainment so in this report, we'll be studying a 
@@ -49,7 +51,7 @@ Disney movies, comparing the inflation adjusted gross and total gross, over time
 from 1937 to 2016. We made it to see which years made the most movies gross.
 
 ```{r plot3, echo=FALSE, fig.width= 20}
-plot_line_graph
+make_1st_chart(movies)
 ```
 
 As you can see, the total gross and inflation adjsuted gross flunctuates but at 
