fixed summary info

--- a/index.Rmd
+++ b/index.Rmd
@@ -29,7 +29,9 @@ in terms of grossing amount. These types of studies help Disney plan future
 films in terms of the genre, ratings etc. the film should stick to.
 
 ## Summary Info
-
+```{r echo=FALSE, include=FALSE}
+summary <- summary_info(movies)
+```
 This data displays a few aspects of Disney movies. Such as the release dates, 
 genre, MPAA rating, total gross income and inflation adjusted gross income. In 
 this data the highest gross movie is `r summary$Highest_Gross_Movie`. Also, the lowest 
@@ -37,9 +39,7 @@ gross movies would be the movies `r summary$Lowest_Gross_Movies`. With this bein
 the most common genre from the data are `r summary$Most_Common_Genre` and the most 
 common release date year would be the `r summary$Most_Common_Release_Year`. Finally, 
 in this data it displays `r summary$Total_Movies`. This can all be seen below.
-```{r echo=FALSE}
-summary_info(movies)
-```
+
 
 ## Summary Table
 
