--- a/index.Rmd
+++ b/index.Rmd
@@ -43,13 +43,9 @@ With this being said, the most common genre from the data are
 
 ## Summary Table
 ```{r echo=FALSE}
-summary_table(movies)
+kable(summary_table(movies))
 ```
 
-This table shows 10 Disney movies with the average inflation gross income of 
-each movie. Included with this is the genre of each of these movies and the 
-MPAA rating. This demonstrates if the movie genre and the MPAA affects the 
-inflation gross income. 
 
 ## What trends do we see between the yearly gross of Disney movies over time?
 
@@ -57,8 +53,8 @@ This chart was intended to show the relationship between the yearly gross of
 Disney movies, comparing the inflation adjusted gross and total gross, over time 
 from 1937 to 2016. We made it to see which years made the most movies gross.
 
-```{r plot3, echo=FALSE, fig.width= 20}
-make_1st_chart(movies)
+```{r echo=FALSE, warning = FALSE, message = FALSE, fig.width= 20}
+plot(make_1st_chart(movies))
 ```
 
 As you can see, the total gross and inflation adjusted gross fluctuates but at 
@@ -74,7 +70,7 @@ the different genres of movies in the dataset. We made this box plot to see
 which genres grossed the most money for Disney.
 
 ```{r echo=FALSE}
-box_plot_adjusted(movies)
+plot(box_plot_adjusted(movies))
 ```
 
 This box plot shows that the Adventure and Musical categories make the most 
@@ -90,7 +86,7 @@ films in Disney's history. We made it to see if there are any trends in which
 types of movies do the best.
 
 ``` {r echo=FALSE}
-make_3rd_chart(movies)
+plot(make_3rd_chart(movies))
 ```
 
 As we can see, the most popular, or highest-grossing, Disney films tend to 
