--- a/index.Rmd
+++ b/index.Rmd
@@ -32,14 +32,16 @@ films in terms of the genre, ratings etc. the film should stick to.
 ```{r echo=FALSE, include=FALSE}
 summary <- summary_info(movies)
 ```
-This data displays a few aspects of Disney movies. Such as the release dates, 
-genre, MPAA rating, total gross income and inflation adjusted gross income. In 
-this data the highest grossing movie is `r summary$Highest_Gross_Movie`. Also, 
-the lowest grossing movies would be the movies `r summary$Lowest_Gross_Movies`.
-With this being said, the most common genre from the data are 
-`r summary$Most_Common_Genre` and the most common release date year would be 
-`r summary$Most_Common_Release_Year`. Finally, in this data it displays 
-`r summary$Total_Movies` different movies.
+This data displays a few aspects of Disney movies. Some of these include movie 
+release dates, genre, MPAA rating, total gross income and inflation adjusted 
+gross income. In this dataset the highest grossing movie is 
+`r summary$Highest_Gross_Movie`. Also, the lowest grossing movies would be the 
+movies `r summary$Lowest_Gross_Movies`. With this being said, the most common 
+genre from the data is `r summary$Most_Common_Genre` and the most common 
+release date year would be `r summary$Most_Common_Release_Year`. Finally, in 
+this data it displays `r summary$Total_Movies` different movies. Studying these
+can help Disney better understand their audience and which types of movies
+they tend to like most.
 
 ## Summary Table
 ```{r echo=FALSE}
