--- a/index.Rmd
+++ b/index.Rmd
@@ -45,14 +45,13 @@ they tend to like most.
 
 ## Summary Table
 
+This table was created to show the most popular genres of Disney movies.
 ```{r echo=FALSE}
 kable(summary_table(movies))
 ```
 
-This table shows 10 Disney movies with the average inflation gross income of 
-each movie. Included with this is the genre of each of these movies and the 
-MPAA rating. This demonstrates if the movie genre and the MPAA affects the 
-inflation gross income. 
+The table shows that Comedy, Adventure, and Drama are by far the most common types to Disney movies in this data set. 
+
 
 ## What trends do we see between the yearly gross of Disney movies over time?
 
